@@ -3,6 +3,10 @@
 #
 dir.genj = ../../dev
 
+#path to the Java-Readline library.
+readline.path=/Users/dsadinoff/java-readline-0.8.0/libreadline-java.jar
+
+
 # javac options - either 'off' or 'on'
 javac.debug = on
 
