@@ -86,6 +86,9 @@ gkid.arg=N
 gkid.error.no-kids=no kids\!
 gkid.error.bad-sib-number=bad sib number
 gkid.error.cant-parse-arg=couldn't parse [
+gkid.error.two-or-more-kids-named = טעות: יש שני או יותר ילדים בשם }0{ 
+gkid.error.no-kid-named = טעות: אין ילדים בשם }0{ 
+
 cbro.help=Create a biological brother [with first name FNAME]
 cson.help=Create son in default/[nth] marriage, with first name FNAME
 cdau.help=Create daughter in default/[nth] marriage, with first name FNAME
